--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img class="yaay"src="img/YAAY.gif" alt="">
+    <a class="new-game" id="new-game" href="#"> Новая игра </a>
     <h1> Запомни картинку </h1>
     <h3 id="heals"> Попытки: 0</h3>
-    <div id="game"></div>
+    <div id="game" ondragstart="return false"></div>
     <script src="script.js"></script>
 </body>
 </html>
